# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "onboarding_lib",
    srcs = ["server.go"],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/onboarding",
    visibility = ["//visibility:private"],
    deps = [
        "//shared/clients/keyclient",
        "//shared/config",
        "//shared/crypto",
        "//shared/models/registry",
        "//shared/signing-authentication/authentication",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "onboarding",
    embed = [":onboarding_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "onboarding_test",
    srcs = ["server_test.go"],
    embed = [":onboarding_lib"],
    deps = [
        "//shared/clients/keyclienttest",
        "//shared/config",
        "//shared/cryptotest",
    ],
)

go_image(
    name = "go_image",
    embed = [":onboarding_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":go_image",
    ports = ["8080"],
    visibility = ["//visibility:public"],
)
