# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "registry-mockup_lib",
    srcs = ["server.go"],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/mockup/registry-mockup",
    visibility = ["//visibility:private"],
    deps = [
        "//shared/config",
        "//shared/crypto",
        "//shared/models/model",
        "//shared/models/registry",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "registry-mockup",
    embed = [":registry-mockup_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "registry-mockup_test",
    srcs = ["server_test.go"],
    data = glob(["testdata/**"]),
    embed = [":registry-mockup_lib"],
    embedsrcs = [
        "testdata/lookup_request_not_found.json",
        "testdata/lookup_request_success.json",
        "testdata/subscribe_request.json",
    ],
    deps = [
        "//shared/config",
        "//shared/crypto",
        "//shared/models/registry",
        "@com_github_google_uuid//:uuid",
    ],
)

go_image(
    name = "buyer_go_image",
    embed = [":registry-mockup_lib"],
    env = {
        "CONFIG": "/config_buyer.json",
    },
    goarch = "amd64",
    goos = "linux",
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/mockup/registry-mockup",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image_buyer",
    base = ":buyer_go_image",
    files = ["config_buyer.json"],
    ports = ["8080"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "seller_go_image",
    embed = [":registry-mockup_lib"],
    env = {
        "CONFIG": "/config_seller.json",
    },
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image_seller",
    base = ":seller_go_image",
    files = ["config_seller.json"],
    ports = ["8080"],
    visibility = ["//visibility:public"],
)
