# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "seller-mockup_lib",
    srcs = ["server.go"],
    embedsrcs = [
        "payload-mock/on_cancel_request.json",
        "payload-mock/on_confirm_request.json",
        "payload-mock/on_init_request.json",
        "payload-mock/on_rating_request.json",
        "payload-mock/on_search_request.json",
        "payload-mock/on_select_request.json",
        "payload-mock/on_status_request.json",
        "payload-mock/on_support_request.json",
        "payload-mock/on_track_request.json",
        "payload-mock/on_update_request.json",
    ],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/mockup/seller-mockup",
    visibility = ["//visibility:private"],
    deps = [
        "//shared/config",
        "//shared/models/model",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "seller-mockup",
    embed = [":seller-mockup_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "seller-mockup_test",
    srcs = ["server_test.go"],
    data = glob(["testdata/**"]),
    embed = [":seller-mockup_lib"],
    embedsrcs = [
        "testdata/search_request.json",
        "testdata/search_request_uncomplete.json",
    ],
    deps = ["//shared/config"],
)

go_image(
    name = "go_image",
    embed = [":seller-mockup_lib"],
    env = {
        "CONFIG": "/config.json",
    },
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":go_image",
    files = ["config.json"],
    ports = ["8080"],
    visibility = ["//visibility:public"],
)
