# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "bpp-api_lib",
    srcs = ["server.go"],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/seller-platform/bpp-api",
    visibility = ["//visibility:private"],
    deps = [
        "//shared/clients/registryclient",
        "//shared/clients/transactionclient",
        "//shared/config",
        "//shared/errorcode",
        "//shared/middleware",
        "//shared/models/model",
        "@com_github_benbjohnson_clock//:clock",
        "@com_github_golang_glog//:glog",
        "@com_google_cloud_go_pubsub//:pubsub",
    ],
)

go_binary(
    name = "bpp-api",
    embed = [":bpp-api_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    embed = [":bpp-api_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":go_image",
    ports = ["8080"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bpp-api_test",
    srcs = ["server_test.go"],
    data = glob(["testdata/**"]),
    embed = [":bpp-api_lib"],
    embedsrcs = [
        "testdata/ack_response.json",
        "testdata/cancel_request.json",
        "testdata/confirm_request.json",
        "testdata/init_request.json",
        "testdata/invalid_request_template.json",
        "testdata/nack_response.json",
        "testdata/rating_request.json",
        "testdata/search_request.json",
        "testdata/select_request.json",
        "testdata/status_request.json",
        "testdata/support_request.json",
        "testdata/track_request.json",
        "testdata/update_request.json",
    ],
    deps = [
        "//shared/clients/registryclienttest",
        "//shared/clients/transactionclient",
        "//shared/config",
        "//shared/models/model",
        "//shared/pubsubtest",
        "//shared/transactiontest",
        "@com_github_benbjohnson_clock//:clock",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_uuid//:uuid",
        "@com_google_cloud_go_pubsub//:pubsub",
    ],
)
