# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/shared/config",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/models/model",
        "//shared/models/registry",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    data = [
        "testdata/bpp_api.json",
        "testdata/callback_action.json",
        "testdata/invalid.json",
        "testdata/invalid_key_rotation.json",
        "testdata/onboarding.json",
    ],  # keep
    embed = [":config"],
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
