# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transactiontest",
    srcs = ["transactiontest.go"],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/shared/transactiontest",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go_spanner//admin/database/apiv1",
        "@com_google_cloud_go_spanner//admin/database/apiv1/databasepb",
        "@com_google_cloud_go_spanner//admin/instance/apiv1",
        "@com_google_cloud_go_spanner//admin/instance/apiv1/instancepb",
        "@org_golang_google_api//option",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
