# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "server_image_pusher_buyer-app-service",
    format = "Docker",
    image = "//buyer-platform/buyer-app-service:image",
    registry = "$(DOCKER_REGISTRY)",
    repository = "$(DOCKER_REPOSITORY)/buyer-app-service",
)

container_push(
    name = "server_image_pusher_bap-api",
    format = "Docker",
    image = "//buyer-platform/bap-api:image",
    registry = "$(DOCKER_REGISTRY)",
    repository = "$(DOCKER_REPOSITORY)/bap-api",
)

container_push(
    name = "server_image_pusher_bap-adapter-service",
    format = "Docker",
    image = "//buyer-platform/bap-adapter-service:image",
    registry = "$(DOCKER_REGISTRY)",
    repository = "$(DOCKER_REPOSITORY)/bap-adapter-service",
)

container_push(
    name = "server_image_pusher_request-action-service",
    format = "Docker",
    image = "//buyer-platform/request-action-service:image",
    registry = "$(DOCKER_REGISTRY)",
    repository = "$(DOCKER_REPOSITORY)/request-action-service",
)
