# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "server_image_pusher_gateway-mockup",
    format = "Docker",
    image = "//mockup/gateway-mockup:image_gateway",
    registry = "$(DOCKER_REGISTRY)",
    repository = "$(DOCKER_REPOSITORY)/gateway-mockup",
)

container_push(
    name = "server_image_pusher_registry-buyer-mockup",
    format = "Docker",
    image = "//mockup/registry-mockup:image_buyer",
    registry = "$(DOCKER_REGISTRY)",
    repository = "$(DOCKER_REPOSITORY)/registry-mockup",
)

container_push(
    name = "server_image_pusher_registry-seller-mockup",
    format = "Docker",
    image = "//mockup/registry-mockup:image_seller",
    registry = "$(DOCKER_REGISTRY)",
    repository = "$(DOCKER_REPOSITORY)/registry-mockup",
)

container_push(
    name = "server_image_pusher_seller-systems-service",
    format = "Docker",
    image = "//mockup/seller-mockup:image",
    registry = "$(DOCKER_REGISTRY)",
    repository = "$(DOCKER_REPOSITORY)/seller-systems-service",
)
