# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "registryclient",
    srcs = ["registry_client.go"],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/shared/clients/registryclient",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/models/model",
        "//shared/models/registry",
        "@com_github_golang_glog//:glog",
    ],
)

go_test(
    name = "registryclient_test",
    srcs = ["registry_client_test.go"],
    embed = [":registryclient"],
    deps = [
        "//shared/models/model",
        "//shared/models/registry",
    ],
)
