# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transactionclient",
    srcs = ["transactionclient.go"],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/shared/clients/transactionclient",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_googleapis_gax_go_v2//apierror",
        "@com_google_cloud_go_spanner//:spanner",
        "@org_golang_google_api//option",
    ],
)
