# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "authentication",
    srcs = [
        "authentication.go",
        "header.go",
    ],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/shared/signing-authentication/authentication",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_tink_go//insecurecleartextkeyset",
        "@com_github_google_tink_go//keyset",
        "@com_github_google_tink_go//proto/ed25519_go_proto",
        "@com_github_google_tink_go//signature",
        "@com_github_google_tink_go//signature/subtle",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_crypto//blake2b",
    ],
)

go_test(
    name = "authentication_test",
    srcs = [
        "authentication_test.go",
        "header_test.go",
    ],
    embed = [":authentication"],
    deps = [
        "@com_github_google_tink_go//proto/ed25519_go_proto",
        "@org_golang_google_protobuf//proto",
    ],
)
